improvemens dropdown, s3 upload

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -49,6 +49,12 @@
    
  }
 
+ .catBtn, .lngBtn{
+   width: 200px;
+   margin: auto;
+  margin-right: 20px;
+ }
+
  .accordion .header{
    font-weight: bold
  }
